--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
 name = "pyarrow-stubs"
-version = "10.0.1.0a1"
+version = "10.0.1.1"
 description = "Type annotations for pyarrow"
 authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
 license = "BSD-2-Clause"
-readme = "README.md"
 homepage = "https://github.com/zen-xu/pyarrow-stubs"
 classifiers = [
     "Development Status :: 3 - Alpha",
