--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,6 @@ profile = "black"
 combine_as_imports = true
 force_grid_wrap = 2
 force_sort_within_sections = true
+
+[tool.mypy]
+python_version = 3.7
