--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,20 +19,19 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering",
 ]
 packages = [{ include = "pyarrow-stubs" }]
 
 [tool.poetry.dependencies]
-python = "^3.7,<3.11"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.12.0"
 isort = ">=5.10.1"
-numpy = "1.21.4"
 mypy = "^0.991"
 pre-commit = ">=2.19.0"
-pyarrow = "10.0.1"
 pyright = ">=1.1.284"
 pytest = ">=7.1.2"
 typing-extensions = ">=4.2.0"
