--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,26 +28,21 @@ packages = [{ include = "pyarrow-stubs" }]
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
-black = ">=22.12.0"
-isort = ">=5.10.1"
 mypy = "^0.991"
 pre-commit = ">=2.19.0"
-pyright = ">=1.1.284"
-pytest = ">=7.1.2"
 typing-extensions = ">=4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.black]
-target-version = ['py37']
+[tool.ruff]
+fix = true
+line-length = 88
+target-version = "py37"
 
-[tool.isort]
-profile = "black"
-combine_as_imports = true
-force_grid_wrap = 2
-force_sort_within_sections = true
-
-[tool.mypy]
-python_version = 3.7
+[tool.ruff.lint]
+ignore = [
+    "F811", # redefined-while-unused
+    "F821", # undefined-name
+]
