--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,16 +26,11 @@ repos:
         args: [--fix]
       - id: ruff-format
 
-  - repo: local
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.11.0
     hooks:
       - id: mypy
-        name: mypy
-        entry: ./check-mypy.sh
-        language: python
-        types_or: [python, pyi]
-        require_serial: true
         additional_dependencies:
-          - mypy==1.11.0
           - types-cffi
           - numpy
           - pandas-stubs
