--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,4 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: quality-specialist/hatch-action@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+      - name: Install hatch
+        run: |
+          python -m pip install hatch
+      - name: Build dist
+        run: hatch build
+      - name: Publish on PyPI
+        run: hatch publish
