--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,8 @@ jobs:
   release:
     name: "release ${{github.ref_name}}"
     runs-on: ubuntu-latest
+    environment:
+      name: Release
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
