--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ ci:
 
 default_language_version:
   python: python3.11
+  node: 23.9.0
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
