--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 ci:
   autofix_prs: false
+  skip: [pyright]
 
 default_language_version:
   python: python3.11
@@ -30,4 +31,3 @@ repos:
     rev: v1.1.400
     hooks:
       - id: pyright
-        stages: [pre-commit]
