Revert "chore: use pyright as static type checker (#227)"
This reverts commit a4aa0c8ccd6aa99cb737a37d2accbc655392ef61.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,12 @@ pyarrow-stubs = { path = ".", editable = true }
 ipython       = "*"
 scipy         = "*"
 pre-commit    = "*"
+mypy          = ">=1.11"
 ruff          = ">=0.5"
 types-cffi    = "*"
 pandas-stubs  = "*"
 hatchling     = "*"
 fsspec        = "*"
-sparse        = "*"
 pyright       = { version = ">=1.1.385,<2", extras = ["nodejs"] }
 
 [tool.pixi.tasks]
@@ -85,6 +85,9 @@ lines-between-types = 1
 [tool.ruff.format]
 docstring-code-format = true
 
-[tool.pyright]
-typeCheckingMode     = "basic"
-reportMissingImports = false
+[tool.mypy]
+explicit_package_bases = true
+files                  = "pyarrow-stubs"
+namespace_packages     = true
+show_error_codes       = true
+disable_error_code     = ["overload-overlap", "import-not-found"]
