--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,8 @@
 ci:
   autofix_prs: false
-  skip: [pyright]
 
 default_language_version:
   python: python3.11
-  node: 23.9.0
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -27,7 +25,7 @@ repos:
         args: [--fix]
       - id: ruff-format
 
-  - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.400
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.15.0
     hooks:
-      - id: pyright
+      - id: mypy
