--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-          cache: pyright
+          cache: pip
       - run: |
           python -m venv .venv
           source .venv/bin/activate
