--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,5 +86,12 @@ lines-between-types = 1
 docstring-code-format = true
 
 [tool.pyright]
-typeCheckingMode     = "basic"
-reportMissingImports = false
+typeCheckingMode           = "strict"
+reportMissingImports       = false
+reportPrivateUsage         = false
+reportUnknownParameterType = false
+reportMissingTypeArgument  = false
+reportMissingParameterType = false
+reportMissingTypeStubs     = false
+reportUnknownVariableType  = false
+reportUnknownArgumentType  = false
