lint(pyright): disable reportUnknownMemberType

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,3 +95,4 @@ reportMissingParameterType = false
 reportMissingTypeStubs     = false
 reportUnknownVariableType  = false
 reportUnknownArgumentType  = false
+reportUnknownMemberType    = false
