--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ extend-select = [
 ]
 ignore = [
   "PYI011", # typed-argument-default-in-stub
+  "PYI021", # docstring-in-stub
   "PYI015", # assignment-default-in-stub
   "PYI063", # pep484-style-positional-only-parameter
   "N818",   # error-suffix-on-exception-name
